--- a/template.yml
+++ b/template.yml
@@ -63,7 +63,7 @@ deploy-existing:
     - kubernetes
     expire_in: 1 day
   script: 
-    - export env=${CI_COMMIT_REF_SLUG:5}
+    - export env=ex-${CI_COMMIT_REF_SLUG:5}
     - cd kubernetes
     - export image=${CI_REGISTRY_IMAGE}
     - if [ -z $CI_COMMIT_TAG ]; then export imageTag=${CI_COMMIT_SHA:0:8}; else export imageTag=$CI_COMMIT_TAG; fi;
