--- a/template.yml
+++ b/template.yml
@@ -76,7 +76,7 @@ deploy-existing:
 deploy-prod:
   image: zoftdev/kustomize-docker:v-3.5.3.2
   rules:
-    - if: $CI_COMMIT_TAG =~ /^v[[:digit:]](\.[[:digit:]]){2}(\-[^[:space:]]+|[_].*)?$/ || $CI_COMMIT_REF_SLUG =~ /^test[\/\-].+$/
+    - if: $CI_COMMIT_TAG =~ /^v[[:digit:]](\.[[:digit:]]){2}(\-[^[:space:]]+|[_].*)?$/
   tags:
     - nxcp-sandbox
   stage: deploy-prod
