--- a/template.yml
+++ b/template.yml
@@ -25,9 +25,8 @@ build-push:
     - echo "{\"auths\":{\"$CI_REGISTRY\":{\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}}}" > /kaniko/.docker/config.json
     - /kaniko/executor --context=$CI_PROJECT_DIR --dockerfile=$CI_PROJECT_DIR/Dockerfile --destination=${CI_REGISTRY_IMAGE}:${imageTag} --build-arg GIT_USER=gitlab-ci-token --build-arg GIT_PASS=${CI_JOB_TOKEN}
 
-.deploy-test-template:
+.deploy-test-script: &deploy-test-script
   script:
-    - export env=${CI_COMMIT_REF_SLUG:5}
     - cd kubernetes
     - export image=${CI_REGISTRY_IMAGE}
     - if [ -z $CI_COMMIT_TAG ]; then export imageTag=${CI_COMMIT_SHA:0:8}; else export imageTag=$CI_COMMIT_TAG; fi;
@@ -50,7 +49,9 @@ deploy-test:
     paths:
     - kubernetes
     expire_in: 1 day
-  extends: .deploy-test-template
+  script:
+      - export env=${CI_COMMIT_REF_SLUG:5}
+      - *deploy-test-script
 
 
 deploy-existing:
@@ -65,7 +66,9 @@ deploy-existing:
     paths:
     - kubernetes
     expire_in: 1 day
-  extends: .deploy-test-template
+  script:
+      - export env=ex-${CI_COMMIT_REF_SLUG:5}
+      - *deploy-test-script
 
 deploy-prod:
   image: zoftdev/kustomize-docker:v-3.5.3.2
