--- a/template.yml
+++ b/template.yml
@@ -25,10 +25,10 @@ build-push:
     - echo "{\"auths\":{\"$CI_REGISTRY\":{\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}}}" > /kaniko/.docker/config.json
     - /kaniko/executor --context=$CI_PROJECT_DIR --dockerfile=$CI_PROJECT_DIR/Dockerfile --destination=${CI_REGISTRY_IMAGE}:${imageTag} --build-arg GIT_USER=gitlab-ci-token --build-arg GIT_PASS=${CI_JOB_TOKEN}
 
-.deploy-test-script: &deploy-test-script
+.kustomize-script: &kustomize-script
   - cd kubernetes
   - export image=${CI_REGISTRY_IMAGE}
-  - if [ -z $CI_COMMIT_TAG ]; then export imageTag=${CI_COMMIT_SHA:0:8}; else export imageTag=$CI_COMMIT_TAG; fi;
+  - if [ -z $CI_COMMIT_TAG ]; then export imageTag=\"${CI_COMMIT_SHA:0:8}\"; else export imageTag=$CI_COMMIT_TAG; fi;
   - for f in base/*.yaml ; do echo $f;envsubst <$f > $f-temp && mv $f-temp $f; done; 
   - envsubst <overlay/${env}/kustomization.yaml > overlay/${env}/kustomization_tmp.yaml && mv overlay/${env}/kustomization_tmp.yaml  overlay/${env}/kustomization.yaml
   - kustomize build overlay/${env} ${kustom_option} > output-${env}.yaml;
@@ -49,7 +49,7 @@ deploy-test:
     expire_in: 1 day
   script:
       - export env=${CI_COMMIT_REF_SLUG:5}
-      - *deploy-test-script
+      - *kustomize-script
       - kubectl apply -f output-${env}.yaml -n ${NAMESPACE}-${env};
 
 
@@ -67,7 +67,7 @@ deploy-existing:
     expire_in: 1 day
   script:
       - export env=ex-${CI_COMMIT_REF_SLUG:5}
-      - *deploy-test-script
+      - *kustomize-script
       - kubectl apply -f output-${env}.yaml -n ${NAMESPACE}-test;
 
 deploy-prod:
@@ -84,12 +84,5 @@ deploy-prod:
     expire_in: 1 day
   script: 
     - export env=prod
-    - cd kubernetes
-    - export image=${CI_REGISTRY_IMAGE}
-    - if [ -z $CI_COMMIT_TAG ]; then export imageTag=${CI_COMMIT_SHA:0:8}; else export imageTag=$CI_COMMIT_TAG; fi;
-    - for f in base/*.yaml ; do echo $f;envsubst <$f > $f-temp && mv $f-temp $f; done; 
-    - envsubst <overlay/${env}/kustomization.yaml > overlay/${env}/kustomization_tmp.yaml && mv overlay/${env}/kustomization_tmp.yaml  overlay/${env}/kustomization.yaml
-    - kustomize build overlay/${env} ${kustom_option} > output-${env}.yaml;
-    - cat output-${env}.yaml;
-
+    - *kustomize-script
     - kubectl apply -f output-${env}.yaml -n $NAMESPACE;
