--- a/template.yml
+++ b/template.yml
@@ -4,6 +4,7 @@ stages:
   - build-images
   - deploy-test
   - deploy-prod
+  - rollback
 
 build-push:
   stage: build
@@ -86,3 +87,32 @@ deploy-prod:
     - export env=prod
     - *kustomize-script
     - kubectl apply -f output-${env}.yaml -n $NAMESPACE;
+
+rollback:
+  rules:
+    - if: $CI_COMMIT_TAG =~ /^v[[:digit:]](\.[[:digit:]]){2}(\-[^[:space:]]+|[_].*)?$/
+  when: manual
+  # needs: ["❤ apply-rollout"]
+  #  image: reghbpr01.dc1.true.th/tools/kustomize-docker:v-3.5.3.2
+  image: reghbpr01.dc1.true.th/tools/kustomize-docker:v-4.0.5
+  tags:
+    - nxcp-sandbox
+  stage: rollback
+  script: 
+    # - export KUBECONFIG=$(env | grep PROD_KUBECONFIG | awk -F '=' '{print $2}')
+    - cd kubernetes
+    - export env=prod
+    - |
+      doc_count=$(yq -d'*' r output-${env}.yaml "kind" | wc -l);
+      count=0;
+      while [ $count -le $(($doc_count -1)) ]; do
+        kind=$(yq -d"$count" r output-${env}.yaml "kind");
+        if [ $kind == "Deployment" ]; then
+          rs_name=$(yq -d"$count" r output-${env}.yaml metadata.name);
+          kubectl rollout undo deploy/${rs_name};
+        elif [ $kind == "StatefulSet" ]; then
+          rs_name=$(yq -d"$count" r output-${env}.yaml metadata.name);
+          kubectl rollout undo sts/${rs_name};
+        fi;
+        count=$(( $count + 1 ));
+      done;
