--- a/template.yml
+++ b/template.yml
@@ -80,6 +80,7 @@ deploy-existing:
 
 deploy-prod:
   image: zoftdev/kustomize-docker:v-3.5.3.2
+  when: manual
   rules:
     - if: $CI_COMMIT_TAG =~ /^v[[:digit:]](\.[[:digit:]]){2}(\-[^[:space:]]+|[_].*)?$/
   tags:
