--- a/template.yml
+++ b/template.yml
@@ -12,7 +12,7 @@ variables:
 build-push:
   stage: build
   rules:
-    - if: $CI_COMMIT_TAG =~ /^v[[:digit:]](\.[[:digit:]]){2}(\-[^[:space:]]+|[_].*)?$/ || $CI_COMMIT_REF_SLUG =~ /^test[\/\-].+$/ || $CI_COMMIT_REF_SLUG =~ /^mint[\/\-].+$/
+    - if: $CI_COMMIT_TAG =~ /^v([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?(?:\+[0-9A-Za-z-]+)?$/ || $CI_COMMIT_REF_SLUG =~ /^test[\/\-].+$/ || $CI_COMMIT_REF_SLUG =~ /^mint[\/\-].+$/
       exists:
       - Dockerfile
   tags:
@@ -82,7 +82,7 @@ deploy-prod:
   image: zoftdev/kustomize-docker:v-3.5.3.2
   when: manual
   rules:
-    - if: $CI_COMMIT_TAG =~ /^v[[:digit:]](\.[[:digit:]]){2}(\-[^[:space:]]+|[_].*)?$/
+    - if: $CI_COMMIT_TAG =~ /^v([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?(?:\+[0-9A-Za-z-]+)?$/
   tags:
     - k8s-tks
   stage: deploy-prod
@@ -100,7 +100,7 @@ deploy-prod:
 
 rollback:
   only: 
-  - $CI_COMMIT_TAG =~ /^v[[:digit:]](\.[[:digit:]]){2}(\-[^[:space:]]+|[_].*)?$/
+  - $CI_COMMIT_TAG =~ /^v([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?(?:\+[0-9A-Za-z-]+)?$/
   when: manual
   image: reghbpr01.dc1.true.th/tools/kustomize-docker:v-4.0.5
   tags:
