--- a/template-v2.yml
+++ b/template-v2.yml
@@ -12,9 +12,9 @@ variables:
 build-push:
   stage: build
   rules:
-    #example : v1.0.0-a.2+1
-    # allow v1.0  , v1.0.0 , v1.0.0-a.2+1
-    - if: $CI_COMMIT_REF_NAME =~ /^v([0-9]+)\.([0-9]+)(\.([0-9]+)(?:-([0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?(?:\+[0-9A-Za-z-]+)?)?$/
+    #example : v1.0.0-a.2  # not support (+)
+    # allow v1.0  , v1.0.0 , v1.0.0-a.2
+    - if: $CI_COMMIT_REF_NAME =~ /^v([0-9]+)\.([0-9]+)(\.([0-9]+)(?:-([0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?)?$/
       exists:
       - Dockerfile    
   tags:
@@ -29,7 +29,7 @@ build-push:
   script:
     #tag=> cleanup to 1.1.1-commit_id
     - env
-    - export imageTag=$(echo $CI_COMMIT_REF_NAME | sed -E 's/^v//' | sed -E 's/[\-].*//')-${CI_COMMIT_SHA:0:8}
+    - export imageTag=$(echo $CI_COMMIT_REF_NAME | sed -E 's/^v//')-${CI_COMMIT_SHA:0:8}
     - echo "{\"auths\":{\"$HARBOR_REGISTRY\":{\"username\":\"$HARBOR_USER\",\"password\":\"$HARBOR_PASS\"}}}" > /kaniko/.docker/config.json
     - /kaniko/executor --context=$CI_PROJECT_DIR --dockerfile=$CI_PROJECT_DIR/Dockerfile --destination=${image}:${imageTag} --build-arg GIT_USER=gitlab-ci-token --build-arg GIT_PASS=${CI_JOB_TOKEN}
 
