only CI_COMMIT_TAG

--- a/template-v2.yml
+++ b/template-v2.yml
@@ -15,7 +15,7 @@ build-push:
     #example : v1.0.0-a.2  # not support (+)
     # allow v1.0.0 , v1.0.0-a.2
     # v is optional
-    - if: $CI_COMMIT_REF_NAME =~ /^v?([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?$/
+    - if: $CI_COMMIT_TAG =~ /^v?([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?$/
       exists:
       - Dockerfile    
   tags:
@@ -32,8 +32,8 @@ build-push:
     - env
     - sep="-"
      #check if have prerelrease version.
-    - if echo $CI_COMMIT_REF_NAME |grep -q "-"; then sep=. ;fi
-    - export imageTag=$(echo $CI_COMMIT_REF_NAME | sed -E 's/^v//')$sep${CI_COMMIT_SHA:0:8}
+    - if echo $CI_COMMIT_TAG |grep -q "-"; then sep=. ;fi
+    - export imageTag=$(echo $CI_COMMIT_TAG | sed -E 's/^v//')$sep${CI_COMMIT_SHA:0:8}
     - echo "{\"auths\":{\"$HARBOR_REGISTRY\":{\"username\":\"$HARBOR_USER\",\"password\":\"$HARBOR_PASS\"}}}" > /kaniko/.docker/config.json
     - /kaniko/executor --context=$CI_PROJECT_DIR --dockerfile=$CI_PROJECT_DIR/Dockerfile --destination=${image}:${imageTag} --build-arg GIT_USER=gitlab-ci-token --build-arg GIT_PASS=${CI_JOB_TOKEN}
 
