--- a/template-v2.yml
+++ b/template-v2.yml
@@ -32,8 +32,7 @@ build-push:
     - env
     - sep="-"
      #check if have prerelrease version.
-    - if echo $CI_COMMIT_TAG |grep -q "-"; then sep=. ;fi
-    - export imageTag=$(echo $CI_COMMIT_TAG | sed -E 's/^v//')$sep${CI_COMMIT_SHA:0:8}
+    - if echo $CI_COMMIT_TAG |grep -q "-"; then  export imageTag=$(echo $CI_COMMIT_TAG | sed -E 's/^v//').${CI_COMMIT_SHA:0:8} ;else  export imageTag=$(echo $CI_COMMIT_TAG | sed -E 's/^v//')  ;fi
     - echo "{\"auths\":{\"$HARBOR_REGISTRY\":{\"username\":\"$HARBOR_USER\",\"password\":\"$HARBOR_PASS\"}}}" > /kaniko/.docker/config.json
     - /kaniko/executor --context=$CI_PROJECT_DIR --dockerfile=$CI_PROJECT_DIR/Dockerfile --destination=${image}:${imageTag} --build-arg GIT_USER=gitlab-ci-token --build-arg GIT_PASS=${CI_JOB_TOKEN}
 
