--- a/.github/workflows/github-backend-ci.yml
+++ b/.github/workflows/github-backend-ci.yml
@@ -1,10 +1,13 @@
 name: CI
+
 on:
-  push:
-    # branches: [ "main" ]
-    tags:
-      - 'v*.*.*'
-  workflow_dispatch:
+  workflow_call:
+# on:
+#   push:
+#     # branches: [ "main" ]
+#     tags:
+#       - 'v*.*.*'
+#   workflow_dispatch:
 
 jobs:
   setenv:
