add test input backend-v2

--- a/.github/workflows/github-backend-ci-v2.yml
+++ b/.github/workflows/github-backend-ci-v2.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: cluster0-nxcp-runner
     steps:
       - name: Test input
-        run: echo "${{ github.event.inputs.image }}"
+        run: echo "${{ inputs.image }}"
   #     - name: Check Tag
   #       id: check-tag
   #       run: |
