--- a/.github/workflows/apprepository-controller.yml
+++ b/.github/workflows/apprepository-controller.yml
@@ -26,6 +26,7 @@ jobs:
           echo "::set-output name=harbor_user::$HARBOR_USER"
           echo "::set-output name=harbor_pass::$HARBOR_PASS"
           echo "::set-output name=tag_name::${GITHUB_SHA::8}"
+          echo "::set-output name=version::${GITHUB_SHA}"
       - uses: actions/checkout@v3
     outputs:
       harbor_registry: ${{ steps.getenv.outputs.harbor_registry }}
@@ -45,4 +46,4 @@ jobs:
             # Add dev auth
             echo -e '{"auths":{"${{needs.setenv.outputs.harbor_registry}}":{"username":"${{needs.setenv.outputs.harbor_user}}","password":"${{needs.setenv.outputs.harbor_pass}}"}}}' > /kaniko/.docker/config.json
             cat /kaniko/.docker/config.json
-            /kaniko/executor --context "$(pwd)" --dockerfile "${{inputs.dockerfile}}" --destination "${{needs.setenv.outputs.harbor_registry}}/cluster0/${{inputs.image}}:${{needs.setenv.outputs.tag_name}}"  --build-arg GIT_USER=github-ci-token --build-arg GIT_PASS=${{ secrets.GITHUB_TOKEN }}
+            /kaniko/executor --context "$(pwd)" --dockerfile "${{inputs.dockerfile}}" --destination "${{needs.setenv.outputs.harbor_registry}}/cluster0/${{inputs.image}}:${{needs.setenv.outputs.tag_name}}"  --build-arg GIT_USER=github-ci-token --build-arg GIT_PASS=${{ secrets.GITHUB_TOKEN }} --build-arg "VERSION=${{needs.setenv.outputs.version}}"
