--- a/.github/workflows/portal-ci-v2.yml
+++ b/.github/workflows/portal-ci-v2.yml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   setenv:
-    runs-on: cluster0-nxcp-runner
+    runs-on: cluster0-github-runner
     steps:
       - name: Check Tag
         id: check-tag
@@ -41,7 +41,7 @@ jobs:
       tag_name: ${{ steps.getenv.outputs.tag_name }}
 
   container-test-job:
-    runs-on: cluster0-nxcp-runner
+    runs-on: cluster0-github-runner
     needs: setenv
     steps:
       - name: checkout
@@ -49,5 +49,5 @@ jobs:
       - name: docker 
         run: |
           echo -e '{"auths":{"${{needs.setenv.outputs.harbor_registry}}":{"username":"${{needs.setenv.outputs.harbor_user}}","password":"${{needs.setenv.outputs.harbor_pass}}"}}}' > /home/runner/.docker/config.json
-          docker build --tag "${{needs.setenv.outputs.harbor_registry}}/portal/${{inputs.image}}:${{needs.setenv.outputs.tag_name}}" --file Dockerfile .
+          docker build --tag "${{needs.setenv.outputs.harbor_registry}}/portal/${{inputs.image}}:${{needs.setenv.outputs.tag_name}}" --file ${{inputs.dockerfile}} .
           docker push "${{needs.setenv.outputs.harbor_registry}}/portal/${{inputs.image}}:${{needs.setenv.outputs.tag_name}}"
