--- a/.github/workflows/portal-ci-v2.yml
+++ b/.github/workflows/portal-ci-v2.yml
@@ -48,6 +48,9 @@ jobs:
         uses: actions/checkout@v3
       - name: docker 
         run: |
+          mkdir -p /home/runner/.docker
+          pwd
+          ls -l
           echo -e '{"auths":{"${{needs.setenv.outputs.harbor_registry}}":{"username":"${{needs.setenv.outputs.harbor_user}}","password":"${{needs.setenv.outputs.harbor_pass}}"}}}' > /home/runner/.docker/config.json
           docker build --tag "${{needs.setenv.outputs.harbor_registry}}/portal/${{inputs.image}}:${{needs.setenv.outputs.tag_name}}" --file ${{inputs.dockerfile}} .
           docker push "${{needs.setenv.outputs.harbor_registry}}/portal/${{inputs.image}}:${{needs.setenv.outputs.tag_name}}"
